--- a/pom.xml
+++ b/pom.xml
@@ -69,5 +69,10 @@
             <artifactId>groovy-all</artifactId>
             <version>2.4.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.1.4</version>
+        </dependency>
     </dependencies>
 </project>
